# compass

./: .gitignore  MANIFEST.in  README.md  abbs.bash  mo.bash  pot.bash  requirements.txt  setup.cfg  wiki.bash
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: abbs.yml  data.yml  mo.yaml  mo.yml  pot-data.yml  pot.yaml  pot.yml  wiki.yml
compass/: __init__.py  activation.py  attribute.py  card.py  data.py  hero.py  note.py  path.py  rank.py  rarity.py  role.py  stage.py  status.py  utils.py
compass/compass-data/data/card/: 455059.json  455060.json  455061.json  455062.json  455063.json  455064.json  455065.json  455066.json  455067.json  455068.json  455069.json  455070.json  455071.json  455072.json  455073.json  455074.json  455075.json  455076.json  455077.json  455078.json  455079.json  455080.json  455081.json  455082.json  455083.json  455084.json  455085.json  455086.json  455087.json  455088.json  455089.json  455090.json  455091.json  455092.json  455093.json  455094.json  455095.json  455096.json  455097.json  455098.json  (+403 more)
compass/compass-data/data/hero/: 454665.json  454666.json  454667.json  454668.json  454669.json  454670.json  454671.json  454672.json  454673.json  454674.json  454696.json  454697.json  454715.json  454716.json  454721.json  454748.json  454749.json  454782.json  454783.json  454794.json  454795.json  454798.json  (+53 more)
compass/data/: abbs.json
compass/locale/: #hero.pot  activation.pot  attribute.pot  card.pot  compass.pot  hero.pot  note.pot  rank.pot  rarity.pot  role.pot  stage.pot  status.pot
(+35 files in other folders)
