[metadata]
name = compass
version = attr: compass.__version__
author = ster
author_email = ster.physics@gmail.com
description = Compass data structures
long_description_content_type = text/markdown
long_description = file: README.md
url = https://github.com/ster-phys/compass
license = GPL-3.0 License
classifier =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.10

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    numpy     # BSD 3-Clause "New" or "Revised" License <https://github.com/numpy/numpy>
    Pillow    # HPND License <https://github.com/python-pillow/Pillow>
    rapidfuzz # MIT License <https://github.com/maxbachmann/RapidFuzz>